--- a/petclinic-web/src/main/resources/templates/owners/index.html
+++ b/petclinic-web/src/main/resources/templates/owners/index.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Custom Pet Clinic Index</title>
+    <title>Title</title>
 </head>
 <body>
-    <h1 th:text="'Index Page'">Index Page</h1>
+<h1 th:text="'Owners list'">Owners list</h1>
 </body>
 </html>
