--- a/petclinic-web/src/main/resources/templates/owners/index.html
+++ b/petclinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<h1 th:text="'Owners list'">Owners list</h1>
+<!--/*@thymesVar id="owner" type="org.ademchenko.custompetclinic.model.Owner"*/-->
+    <h1 th:text="'Owners list'">Owners list</h1>
+    <table>
+        <thead>
+            <tr>
+                <td>Id</td>
+                <td>First Name</td>
+                <td>Last Name</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="owner : ${owners}">
+                <td th:text="${owner?.id}">1</td>
+                <td th:text="${owner?.firstName}">Joe</td>
+                <td th:text="${owner?.lastName}">Doe</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
