--- a/petclinic-web/src/main/resources/templates/owners/index.html
+++ b/petclinic-web/src/main/resources/templates/owners/index.html
@@ -6,22 +6,22 @@
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="org.ademchenko.custompetclinic.model.Owner"*/-->
-    <h1 th:text="'Owners list'">Owners list</h1>
-    <table>
-        <thead>
-            <tr>
-                <td>Id</td>
-                <td>First Name</td>
-                <td>Last Name</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="owner : ${owners}">
-                <td th:text="${owner?.id}">1</td>
-                <td th:text="${owner?.firstName}">Joe</td>
-                <td th:text="${owner?.lastName}">Doe</td>
-            </tr>
-        </tbody>
-    </table>
+<h1 th:text="'Owners list'">Owners list</h1>
+<table>
+    <thead>
+    <tr>
+        <td>Id</td>
+        <td>First Name</td>
+        <td>Last Name</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner?.id}"></td>
+        <td th:text="${owner?.firstName}"></td>
+        <td th:text="${owner?.lastName}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
