--- a/petclinic-web/src/main/resources/templates/vets/index.html
+++ b/petclinic-web/src/main/resources/templates/vets/index.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="'Vets list'">Vets list</h1>
+<!--/*@thymesVar id="vet" type="org.ademchenko.custompetclinic.model.Vet"*/-->
+<h1 th:text="'Vets list'">Vets list</h1>
+<table>
+    <thead>
+    <tr>
+        <td>Id</td>
+        <td>First Name</td>
+        <td>Last Name</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet?.id}"></td>
+        <td th:text="${vet?.firstName}"></td>
+        <td th:text="${vet?.lastName}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
