--- a/petclinic-web/src/main/resources/templates/owners/index.html
+++ b/petclinic-web/src/main/resources/templates/owners/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="org.ademchenko.custompetclinic.model.Owner"*/-->
-<h1 th:text="'Owners list'">Owners list</h1>
-<table>
+<h2 th:text="'Owners list'">Owners list</h2>
+<table class="table table-striped">
     <thead>
     <tr>
-        <td>Id</td>
-        <td>First Name</td>
-        <td>Last Name</td>
+        <td style="width: 150px;">Id</td>
+        <td style="width: 150px;">First Name</td>
+        <td style="width: 150px;">Last Name</td>
     </tr>
     </thead>
     <tbody>
