--- a/petclinic-web/src/main/resources/templates/vets/index.html
+++ b/petclinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,7 +7,7 @@
 <body>
 <!--/*@thymesVar id="vet" type="org.ademchenko.custompetclinic.model.Vet"*/-->
 <h1 th:text="'Vets list'">Vets list</h1>
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
         <td>Id</td>
